mensagens sem scroll

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -83,6 +83,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    word-wrap: break-word;
 }
 
 .chat__form {
