--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url(../images/background.png);
+    background-color:rgb(19, 24, 19);
     color: #f2f2f2;
 }
 
@@ -127,6 +127,7 @@ body {
     font-weight: 500;
     margin-bottom: 15px;
     line-height: 22px;
+    overflow-wrap: break-word;
 }
 
 .message__self {
@@ -134,6 +135,7 @@ body {
     color: #121212;
     border-radius: 10px 10px 0 10px;
     align-self: flex-end;
+
 }
 
 .message__other {
